# merkle-air-dropper

./: .gitattributes  Anchor.toml  Cargo.toml  README.md  bla.rb  codama.ts  package-lock.json  package.json  solita.ts  tsconfig.json
app/: .env  index.html  package-lock.json  package.json
app/src/: App.tsx
app/src/airdrop/: get_merkle_json.ts
app/src/airdrop/merkle-air-dropper-helpers/: helpers.ts  pda.ts
app/src/airdrop/merkle-air-dropper-libs/accounts/: AirDropStatus.ts
app/src/airdrop/merkle-air-dropper-libs/instructions/: index.ts
app/src/airdrop/merkle-air-dropper-libs/types/: CreateMerkleAirDropperSourceArgs.ts  index.ts
app/src/components/HeaderMain/: index.tsx
app/src/context/: claimContex.tsx
app/src/pages/: claim.tsx  claimed.tsx
codama/js/accounts/: airDropStatus.ts  index.ts  merkleAirDropperSource.ts
codama/js/errors/: index.ts  merkleAirDropper.ts
codama/js/instructions/: claimAirDrop.ts  createMerkleAirDropperSource.ts  index.ts
codama/js/programs/: merkleAirDropper.ts
codama/rust/: mod.rs  programs.rs
codama/rust/accounts/: air_drop_status.rs  merkle_air_dropper_source.rs  mod.rs
codama/rust/errors/: merkle_air_dropper.rs  mod.rs
codama/rust/instructions/: claim_air_drop.rs  create_merkle_air_dropper_source.rs  mod.rs
libs/cli/: Cargo.toml
libs/cli/src/: main.rs
libs/cli/src/helpers/: create_plan.rs  file_utils.rs  mod.rs
libs/cli/src/tests/: mod.rs  test_32k_tree.rs  test_read_air_dropper_plan_from_file.rs  test_read_keys_from_dir.rs  test_read_merkle_from_file.rs  test_rs_merkle.rs
libs/common/: Cargo.toml
libs/common/src/: helpers.rs
merkle-air-dropper-helpers/: helpers.ts  pda.ts  wrapper.ts
merkle-air-dropper-libs/: index.ts
merkle-air-dropper-libs/accounts/: ClaimAirDropStatus.ts  MerkleAirDropper.ts  MerkleAirDropperSource.ts  index.ts
merkle-air-dropper-libs/instructions/: claimAirDrop.ts  createMerkleAirDropper.ts  createMerkleAirDropperSource.ts  index.ts
merkle-air-dropper-libs/types/: ClaimAirDropArgs.ts  CreateMerkleAirDropperArgs.ts  index.ts
programs/bla/: Cargo.toml
programs/bla/src/: lib.rs
programs/merkle-air-dropper/: Cargo.toml
programs/merkle-air-dropper/src/: lib.rs
programs/merkle-air-dropper/src/events/: claim_air_drop_event.rs  merkle_air_dropper_event.rs  merkle_air_dropper_source_event.rs  mod.rs
programs/merkle-air-dropper/src/instructions/: claim_air_drop.rs  claim_air_drop_status.rs  create_merkle_air_dropper.rs  create_merkle_air_dropper_source.rs  mod.rs
programs/merkle-air-dropper/src/state/: air_drop_status.rs  claim_air_drop_status.rs  merkle_air_dropper.rs  merkle_air_dropper_source.rs  mod.rs
scripts/: copy-over.sh  helpers.sh  run-cli.sh  test-cli.sh
tests/: 0-prep.ts  1-create-air-dropper.ts  1-create-droppers.ts  2-claims.ts  2-success-claim.ts  3-big-merkle.ts  3-fail-claim.ts
tests-fixtures/32k-keys/: 0.json  1.json  10.json  100.json  1000.json  10000.json  10001.json  10002.json  10003.json  10004.json  10005.json  10006.json  10007.json  10008.json  10009.json  1001.json  10010.json  10011.json  10012.json  10013.json  10014.json  10015.json  10016.json  10017.json  10018.json  10019.json  1002.json  10020.json  10021.json  10022.json  10023.json  10024.json  10025.json  10026.json  10027.json  10028.json  10029.json  1003.json  10030.json  10031.json  (+31960 more)
tests-fixtures/keys/: 0.json  1.json  10.json  11.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
tests-fixtures/merkle/: 32k_merkle.json  merkle.json  merkle2.json
tests-fixtures/plan/: 32k_plan.json  merkle.json  plan.json  plan2.json
