[workspace]
members = [
  "libs/*",
  "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1



[patch.crates-io]
## aes-gcm-siv 0.10.3 and curve25519-dalek 3.x pin zeroize to <1.4
## which conflicts with other dependencies requiring zeroize ^1.5.
## We’re patching both crates to unpin zeroize.
##
## For aes-gcm-siv we’re using the same revision Solana uses in
## an (as of now) unreleased commit, see
## https://github.com/solana-labs/solana/commit/01f1bf27994d9813fadfcd134befd3a449aaa0bd
##
## For curve25519-dalek we’re using commit from a PR, see
## https://github.com/dalek-cryptography/curve25519-dalek/pull/606
#aes-gcm-siv = { git = "https://github.com/RustCrypto/AEADs", rev = "6105d7a5591aefa646a95d12b5e8d3f55a9214ef" }
#curve25519-dalek = { git = "https://github.com/dalek-cryptography/curve25519-dalek", rev = "8274d5cbb6fc3f38cdc742b4798173895cd2a290" }
aes-gcm-siv = { git = 'https://github.com/block-mesh/AEADs', branch = 'rustls-dep-hell-1-18' }
curve25519-dalek = { git = "https://github.com/block-mesh/curve25519-dalek", branch = "rustls-dep-hell-1-18" }

[workspace.dependencies]
colored = "2.2.0"
rs_merkle = "1.4"
clap = { version = "4.5.2", features = ["derive"] }
sha2 = { version = "0.10.8" }
tokio = { version = "1.0", features = ["full"] }
anchor-lang-idl = { version = "0.1.1", features = ["convert"] }
anchor-client = { version = "0.29.0", features = ["async"] }
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.29.0", features = ["spl-associated-token-account", "spl-token", "metadata"] }
solana-client = { version = "1.18.20" }
solana-program-test = { version = "1.18.20" }
solana-zk-token-sdk = { version = "1.18.20" }
solana-account-decoder = { version = "1.18.20" }
solana-program = { version = "1.18.20" }
solana-sdk = { version = "1.18.20" }
arrayref = { version = "0.3.7" }
serde = { version = "1.0.164", features = ["derive"] }
anyhow = { version = "1.0.71" }
thiserror = { version = "1.0.40" }
serde_json = { version = "1", features = ["raw_value"] }

[workspace.dependencies.rand]
version = "0.8.5"
features = ["min_const_gen"]
